--- a/Q1-5.md
+++ b/Q1-5.md
@@ -1,5 +1,5 @@
 ﻿标签：Driphp
-# PHP Daily Ask
+# Q1-5
 
 ---
 
@@ -89,9 +89,33 @@ $arr = json_decode(json_encode($xmlstring),true);
 客户端访问服务器，是通过http协议访问的。
 http协议的header信息中，包含了客户端的ip地址，也就是ip地址带给了服务器，那么服务器就可以获取客户端ip地址。
 ![WechatIMG47.jpeg-78.4kB][1]
+
 对于MAC地址，http协议是不会发送给服务端的，那么，服务端就无法获取。
 
  
-
-
   [1]: http://static.zybuluo.com/ericliu001/a4xb3xao973plbx05pczr0wz/WechatIMG47.jpeg
+  
+##NO.5 如何在数组的任意位置插入新元素？
+###问题描述
+这个问题有好几种解决办法，主要是考验对数组函数的灵活掌握能力，也是基本功了~
+如：
+```php
+INPUT:$arr=['a','b','c','d','e'];//(要求在d的前面插入x)
+OUTPUT:$arr=['a','b','c','x','d','e'];
+
+```
+###解决办法
+```php
+1、使用array_splice()[推荐]
+<?php
+$arr = array( 'a', 'b', 'c', 'd', 'e' );
+$inserted = array( 'x' );
+array_splice( $arr, 3, 0, $inserted );
+print_r($arr);
+
+2、使用array_merge()、array_slice()进行组合。
+<?php
+$arr1=['a','b','c','d','e'];
+$arr=array_merge(array_slice($arr1,0,3),['x'],array_slice($arr1,3));
+print_r($arr);
+```
