--- a/Q1-5.md
+++ b/Q1-5.md
@@ -1,121 +1,15 @@
-﻿标签：Driphp
-# Q1-5
+﻿//调接口
+$url='http://www.doremi365.com:8082/service/loanApp';
+$confirm=1;
+$rejectReason='';
+$parameter=['v'=>1,'t'=>time(),'appid'=>PIANO_365_APPID,'custMobile'=>'',
+            'key'=>PIANO_365_APPSECRET,'orderNo'=>'','confirm'=>$confirm, 'rejectReason'=>$rejectReason,
+            'pianoOrgCode'=>'','pianoOrgName'=>'','pianoBrand'=>'','pianoIndetifierCode'=>''];
+Piano::call_out_api($url,$parameter);
 
----
-
-##NO.1 如何解决浮点数计算不精确问题？
-
-### 问题描述
-在实际的项目中，往往会遇到浮点数计算的问题，但浮点数计算结果不精确，如何解决这个问题呢？如下面：
-
-```php
-<?php
-var_dump(0.58*100*100==5800);//false
-```
-### 解决办法
-NO.1 先把浮点数计算结果变为string类型，再转为int类型。
-```php
-<?php
-var_dump(intval(strval(0.58*100*100))==5800);//true
-```
-NO.2使用BCMath高精度函数库。[建议用这个，更方便]
-```php
-bcadd($a,$b,$scale) 两个数相加,$scale为保留几位小数
-bcsub($a,$b,$scale) 左操作数减去右操作数
-bcmul($a,$b,$scale) 左数乘以右数
-bcdiv($a,$b) 左数除以右数
-```
-示例如下
-```php
-bcadd(1,2,1);//3.0
-bcsub(5,3);//2
-bcmul(5,3);//15
-bcdiv(100,2.2,2);//45.45
-```
-##NO.2 如何获取文件扩展(后缀)名？
-### 问题描述
-获取文件后缀名，是一个很实用，又有很多种解法的问题。
-如：获取 /testweb/test.txt 的扩展名
-### 解决办法
-PHP中有一个函数：pathinfo()，可以获取文件的路径信息
-```php
-<?php
-$file='/testweb/test.txt';
-print_r(pathinfo($file));
-```
-上面的代码输出
-```php
-Array
-(
-    [dirname] => /testweb
-    [basename] => test.txt
-    [extension] => txt
-    [filename] => test
-)
-```
-其中，extension就是文件的扩展名。
-获取文件的扩展名，需要下面代码：
-```php
-<?php
-$file='/testweb/test.txt';
-$path=pathinfo($file);
-$extension=$path['extension'];//txt
-```
-或者，下面的代码
-```php
-<?php
-$file='/testweb/test.txt';
-$extension=pathinfo($file,PATHINFO_EXTENSION);//txt
-```
-##NO.3 如何将xml转换成数组
-###问题描述
-有时候，我们需要将xml转变成数组，以方便我们操作。比如接入微信支付的时候，微信返回给我们的就是xml数据，我们需要拿到xml，将xml转成数组。
-###解决办法
-```php
-//禁止引用外部xml实体 
-libxml_disable_entity_loader(true); 
-//将xml载入对象中（转变成object）
-$xmlstring = simplexml_load_string($xml, 'SimpleXMLElement', LIBXML_NOCDATA); 
-//将object转变成json,再json_decode转变成数组
-$arr = json_decode(json_encode($xmlstring),true); 
-```
-##NO.4 如何获取客户端的ip地址与MAC地址
-###解决办法
- - 获取ip地址：可以通过变量$_SERVER['REMOTE_ADDR']获取。
- - 获取mac地址：不可能。
-
-###问题讨论：为什么能够获取ip地址，不能获取mac地址呢？
-
-客户端访问服务器，是通过http协议访问的。
-http协议的header信息中，包含了客户端的ip地址，也就是ip地址带给了服务器，那么服务器就可以获取客户端ip地址。
-![WechatIMG47.jpeg-78.4kB][1]
-
-对于MAC地址，http协议是不会发送给服务端的，那么，服务端就无法获取。
-
- 
-  [1]: http://static.zybuluo.com/ericliu001/a4xb3xao973plbx05pczr0wz/WechatIMG47.jpeg
-  
-##NO.5 如何在数组的任意位置插入新元素？
-###问题描述
-这个问题有好几种解决办法，主要是考验对数组函数的灵活掌握能力，也是基本功了~
-如：
-```php
-INPUT:$arr=['a','b','c','d','e'];//(要求在d的前面插入x)
-OUTPUT:$arr=['a','b','c','x','d','e'];
-
-```
-###解决办法
-```php
-1、使用array_splice()[推荐]
-<?php
-$arr = array( 'a', 'b', 'c', 'd', 'e' );
-$inserted = array( 'x' );
-array_splice( $arr, 3, 0, $inserted );
-print_r($arr);
-
-2、使用array_merge()、array_slice()进行组合。
-<?php
-$arr1=['a','b','c','d','e'];
-$arr=array_merge(array_slice($arr1,0,3),['x'],array_slice($arr1,3));
-print_r($arr);
-```
+'contractInfo'=>[
+      'pianoOrgCode'=>'',
+      'pianoOrgName'=>'',
+      'pianoBrand'=>'',
+      'pianoIndetifierCode'=>''
+]
