--- a/Q11-15.md
+++ b/Q11-15.md
@@ -17,8 +17,128 @@ Traits是在**水平方向**上扩展类的功能。
 
 通俗点说：Traits就是有意义的代码块，你可以在类中随时引入这个代码块，从而在水平方向上，扩展你类的功能。
 
+##NO.12正则表达式的使用
+###问题描述
+对于字符串“python php ruby javascript jsonp perhapsphpisoutdated”。
+使用正则获取 所有带 "p" 但是不能包含 "ph" 的单词？
+###问题解决
+```php
+\b((?!ph|\s).)*((p[^h\s]((?!ph|\s).)*)|p)\b/g
+```
+参考资料：[segment][1]
+##NO.13 什么是PHP hook？
+钩子是一种事件驱动的消息处理机制。
+
+一个事件，可以看作一段完成某个目的的程序。比如查询一次数据库，或者访问某个网址等等。
+
+事件驱动分为两个阶段：
+
+第一个阶段是注册事件，目的是给未来可能发生的“事件”起一个名字，简单的实现方法是用单例模式产生一个持久的对象或者注册一个全局变量，然后将事件名称，以及该事件对应的类与方法插入全局变量即可。也就是挂载一个钩子
+
+第二个阶段是触发事件，本质上就是在事件的全局变量中查询要触发的事件名称，然后找到注册好的类与方法，实例化并运行。这样子就可以摆脱传统方式中程序必须按顺序的规则，进一步实现解除耦合的目的。
+
+http://baijunyao.com/article/85
+php中钩子(hook)的应用示例demo(讲的很形象)
+
+##NO.14 什么是单例模式？单例模式的应用场景是什么？
+###什么是单例模式
+单例，就是只有一个对象实例。
+###为什么要用单例模式？
+比如，数据库的连接,只需要实例化1个对象就可以了。
+如果实例化多个数据库连接对象，会造成以下问题：
+
+ 1. 资源浪费
+ 2. 可能造成数据不一致
+
+###如何保证一个类不会有多个对象呢？
+我们一步步的推导：
+
+Q:为什么会有多个对象呢？
+A:因为在类的外部可以随意new一个对象。或者，clone一个对象。
+
+Q:如何保证只有一个对象呢？
+A:不允许在类的外部new、clone对象。
+
+Q:如何不允许在类的外部new、clone对象呢？
+**A:将这个类的构造方法设置成private,就可以防止在外部new一个对象。**
+在类的内部实现__clone()这个方法。
+
+###如何才能生成这个唯一的对象呢？
+在类的内部，提供一个public方法。
+外部通过调用这个public方法，来获取类的实例对象。
+
+##代码演示
+```php
+<?php
+/**
+ * 单例模式 2010-06-06 sz
+ * @author phppan.p#gmail.com  http://www.phppan.com
+ * 哥学社成员（http://www.blog-brother.com/）
+ * @package design pattern
+ */
+ 
+/**
+ * 懒汉式单例类
+ */
+class Singleton {
+ 
+    /**
+     * 静态成品变量 保存全局实例
+     */
+    private static  $_instance = NULL;
+ 
+    /**
+     * 私有化默认构造方法，保证外界无法直接实例化
+     */
+    private function __construct() {
+    }
+ 
+    /**
+     * 静态工厂方法，返还此类的唯一实例
+     */
+    public static function getInstance() {
+        if (is_null(self::$_instance)) {
+            self::$_instance = new self();
+        }
+ 
+        return self::$_instance;
+    }
+ 
+    /**
+     * 防止用户克隆实例
+     */
+    public function __clone(){
+        die('Clone is not allowed.' . E_USER_ERROR);
+    }
+ 
+    /**
+     * 测试用方法
+     */
+    public function test() {
+        echo 'Singleton Test!';
+    }
+ 
+}
+ 
+/**
+ * 客户端
+ */
+class Client {
+ 
+     /**
+     * Main program.
+     */
+    public static function main() {
+        $instance = Singleton::getInstance();
+        $instance->test();
+    }
+}
+ 
+Client::main();
+?>
+```
 
 
 
 
-
+  [1]: https://segmentfault.com/q/1010000006155587?sort=created
