--- a/Q11-15.md
+++ b/Q11-15.md
@@ -71,14 +71,7 @@ Q:如何不允许在类的外部new、clone对象呢？
 ```php
 <?php
 /**
- * 单例模式 2010-06-06 sz
- * @author phppan.p#gmail.com  http://www.phppan.com
- * 哥学社成员（http://www.blog-brother.com/）
- * @package design pattern
- */
- 
-/**
- * 懒汉式单例类
+ * 单例类
  */
 class Singleton {
  
