观察者模式

--- a/Q11-15.md
+++ b/Q11-15.md
@@ -130,8 +130,168 @@ class Client {
 Client::main();
 ?>
 ```
+##NO.15观察者模式
+###针对具体实现编程，会导致我们以后在增加或删除布告板时必须修改程序。
+
+###观察者模式定义
+在对象之间定义一对多的依赖，这样一来，当一个对象改变状态，依赖他的对象都会收到通知，并自动更新。
+###为什么使用观察者模式
+针对具体场景的编程，耦合性比较高。
+使用观察者模式，观察者，与被观察者之间，不用关心彼此之间内部如何实现，双方只需要定义好消息通知的接口就可以了。这样实现了低耦合。
+
+###简单代码实现
+```php
+<?php
+ 
+/**
+ * @package design pattern
+ */
+ 
+/**
+ * 抽象主题角色
+ */
+interface Subject {
+ 
+    /**
+     * 增加一个新的观察者对象
+     * @param Observer $observer
+     */
+    public function attach(Observer $observer);
+ 
+    /**
+     * 删除一个已注册过的观察者对象
+     * @param Observer $observer
+     */
+    public function detach(Observer $observer);
+ 
+    /**
+     * 通知所有注册过的观察者对象
+     */
+    public function notifyObservers();
+}
+ 
+/**
+ * 具体主题角色
+ */
+class ConcreteSubject implements Subject {
+ 
+    private $_observers;
+ 
+    public function __construct() {
+        $this->_observers = array();
+    }
+ 
+    /**
+     * 增加一个新的观察者对象
+     * @param Observer $observer
+     */
+    public function attach(Observer $observer) {
+        return array_push($this->_observers, $observer);
+    }
+ 
+    /**
+     * 删除一个已注册过的观察者对象
+     * @param Observer $observer
+     */
+    public function detach(Observer $observer) {
+        $index = array_search($observer, $this->_observers);
+        if ($index === FALSE || ! array_key_exists($index, $this->_observers)) {
+            return FALSE;
+        }
+ 
+        unset($this->_observers[$index]);
+        return TRUE;
+    }
+ 
+    /**
+     * 通知所有注册过的观察者对象
+     */
+    public function notifyObservers() {
+        if (!is_array($this->_observers)) {
+            return FALSE;
+        }
+ 
+        foreach ($this->_observers as $observer) {
+            $observer->update();
+        }
+ 
+        return TRUE;
+    }
+ 
+}
+ 
+/**
+ * 抽象观察者角色
+ */
+interface Observer {
+ 
+    /**
+     * 更新方法
+     */
+    public function update();
+}
+ 
+class ConcreteObserver implements Observer {
+ 
+    /**
+     * 观察者的名称
+     * @var <type>
+     */
+    private $_name;
+ 
+    public function __construct($name) {
+        $this->_name = $name;
+    }
+ 
+    /**
+     * 更新方法
+     */
+    public function update() {
+        echo 'Observer', $this->_name, ' has notified.<br />';
+    }
+ 
+}
+ 
+/**
+ * 客户端
+ */
+class Client {
+ 
+    /**
+     * Main program.
+     */
+    public static function main() {
+        $subject = new ConcreteSubject();
+ 
+        /* 添加第一个观察者 */
+        $observer1 = new ConcreteObserver('Martin');
+        $subject->attach($observer1);
+ 
+        echo '<br /> The First notify:<br />';
+        $subject->notifyObservers();
+ 
+        /* 添加第二个观察者 */
+        $observer2 = new ConcreteObserver('phppan');
+        $subject->attach($observer2);
+ 
+        echo '<br /> The Second notify:<br />';
+        $subject->notifyObservers();
+ 
+        /* 删除第一个观察者 */
+        $subject->detach($observer1);
+ 
+        echo '<br /> The Third notify:<br />';
+        $subject->notifyObservers();
+    }
+ 
+}
+ 
+Client::main();
+?>
+```
 
 
 
+>大罗分享：观察者模式很常用啊，比如说我现在需要你发生某个case的时候需要通知我。首先我们要约定一个interface,这个接口由我来实现，而你不用关心这个接口的实现。我把这个interface告诉你，你在发生这个case的时候执行这个interface的fuction就好了。我就是观察者，你就是被观察者。 安卓底层实现了很多这种观察者模式，例如对contentProvider(数据提供者)的观察，他会给出一个interface.并给出registerObeser方法，参数必须是这个interface类型的。三方app开发人员，只需要实现这个interface.然后registe就好了。这里涉及面相接口编程的思想。
 
   [1]: https://segmentfault.com/q/1010000006155587?sort=created
