变态跳台阶

--- a/Q16-20.md
+++ b/Q16-20.md
@@ -55,6 +55,9 @@ fwrite($fp, base64_decode($_POST['data']));
 fclose($fp);
 ```
 ##NO.17变态跳台阶问题
+###问题描述
+一只青蛙一次可以跳上1级台阶，也可以跳上2级……它也可以跳上n级。求该青蛙跳上一个n级的台阶总共有多少种跳法？
+###分析推导
 ```php
 关于本题，前提是n个台阶会有一次n阶的跳法。分析如下:
 f(1) = 1
@@ -86,6 +89,7 @@ f(n) = f(n-1) + f(n-2) + f(n-3) + ... + f(n-(n-1)) + f(n-n)
 f(n) =        | 1       ,(n=1 )
               | 2*f(n-1),(n>=2)
 ```
+###代码实现
 ```php
 <?php
 function jumpFloor($target) {
