什么是适配器模式

--- a/Q16-20.md
+++ b/Q16-20.md
@@ -102,7 +102,71 @@ function jumpFloor($target) {
     }
 }
 ```
+##NO.18 psr-4中autoloader的原理是什么？
 
+###问题描述
+####为什么使用类的自动加载？
+
+随着项目的变大，一个文件中使用的类越来越多，可能需要加载几十个类文件。如何对这些引入的类进行管理呢？
+最开始使用 __autoload()。但是如果一个项目依赖多个框架，多个框架都有__autoload()，就会报函数重复定义的错误
+###问题解决
+如何解决呢？
+使用spl_autoload_register()去注册一个自动加载函数。
+http://blog.csdn.net/panpan639944806/article/details/23192267
+
+ PSR-4规范能够满足面向package的自动加载，它规范了如何从文件路径自动加载类，同时规范了自动加载文件的位置。
+
+ 具体：https://my.oschina.net/1pei/blog/485099
+##NO.19 适配器模式
+###为什么使用适配器模式
+可以将截然不同的函数接口封装成统一的API。
+###适配器模式的应用场景
+1、系统想要使用现有的类，而现有的类不符合系统接口规则，要对这个接口进行适配；
+2、两个类做的事情相同或相似，形成对外的统一接口，方便以后其他类的引入，适配。
+####连接数据库的适配器。
+连接数据库可以使用PDO、Mysql、Mysqli等，每种连接方式都不同。
+如何对外形成一个统一的调用接口呢？
+####Cache的适配器。
+连接Cache，可以有Redis、Memcached等，每种连接方式也不同。
+如何对外形成一个统一的调用接口呢？
+###适配器模式的设计思路
+
+ - 定义适配接口
+```php
+<?php
+interface Database{
+    public function connect();
+    public function query();
+    public function close();
+}
+```
+ - 每个类实现这个接口
+ 
+Mysql连接的实现方法
+```php
+class Mysql implements Database{
+    //实现方法
+}
+```
+Mysqli连接的实现方法
+```php
+class Mysqli implements Database{
+   //实现方法
+}
+```
+PDO连接的实现方法
+```php
+class PDO implements Database{
+   //实现方法
+}
+```
+ - 应用中的实现
+```php
+<?php
+$conn=new Mysql();//使用Mysql连接
+$conn=new Mysqli();//使用Mysqli连接
+$conn=new PDO();//使用PDO连接
+```
 
 
 
