二分查找的应用

--- a/Q16-20.md
+++ b/Q16-20.md
@@ -167,6 +167,51 @@ $conn=new Mysql();//使用Mysql连接
 $conn=new Mysqli();//使用Mysqli连接
 $conn=new PDO();//使用PDO连接
 ```
+##NO.20 二分法的应用
+###问题描述
+用二分法(也叫折半查找法)查找数组中的某元素。
+###问题解决
+```php
+<?php
+/**
+ *$arr 要查找的数组
+ *$value 要查找的数组中的值
+ *查找到返回true 查找失败返回false
+ */
+function binary_search($arr,$value){
+	//将数组排序成有序数组
+	sort($arr);
+	$count=count($arr);
+	if($count<=0) return false;
+	$mid_key=intval($count/2);
+	$mid_value=$arr[$mid_key];
+	//如果中间值就是要查找的值，返回true
+	if($mid_value==$value){
+		return true;
+	}
+	//如果中间值大于要查找的值，在数组的左半边进行查找
+	if($mid_value>$value){
+		$arr=array_slice($arr, 0,$mid_key);
+		return binary_search($arr,$value);
+	}
+	//如果中间值小于要查找的值，在数组的右半边进行查找
+	if($mid_value<$value){
+		$arr=array_slice($arr, $mid_key+1);
+		return binary_search($arr,$value);
+	}
+	return false;
+}
 
+//测试使用
+$arr=[1,6,2,3,4];
+
+$value=6;
+$res_right=binary_search($arr,$value);
+var_dump($res_right);//返回true
+
+$value=5;
+$res_wrong=binary_search($arr,$value);
+var_dump($res_wrong);//返回false
+```
 
 
