--- a/Q21-25.md
+++ b/Q21-25.md
@@ -31,6 +31,52 @@ class Substraction extends Addition {
   }
 }
 ```
+##NO.22 php中的yield是什么？有什么用？
+###yield是什么
+含有yield关键字的函数被调用时候和普通函数不同，他不执行函数代码，而是返回一个generator对象，这个对象可迭代。
+###应用场景
+###内存超过100MB的解决办法
+标准的 range() 函数需要在内存中生成一个数组，然后返回该数组, 结果就是会产生多个很大的数组。 
+比如，调用 range(0, 1000000) 将导致内存占用超过 100 MB。
 
 
+----------
 
+
+做为一种替代方法, 我们可以实现一个 xrange() 生成器, 只需要足够的内存来创建 Iterator 对象并在内部跟踪生成器的当前状态，这样只需要不到1K字节的内存。
+```php
+<?php
+function xrange($start, $limit, $step = 1) {
+        if ($step <= 0) {
+            throw new LogicException('Step must be +ve');
+        }
+        for ($i = $start; $i <= $limit; $i += $step) {
+            yield $i;
+        }
+}
+
+/* 
+ * 注意下面range()和xrange()输出的结果是一样的。
+ */
+
+foreach (range(1, 9, 2) as $number) {
+    echo "$number ";
+}
+echo "\n";
+
+foreach (xrange(1, 9, 2) as $number) {
+    echo "$number ";
+}
+?>
+```
+###其他应用场景
+[在PHP中使用协程实现多任务调度][1]
+
+##参考文章
+[yield是什么-知乎][2]
+[生成器语法-PHP手册][3]
+[在PHP中使用协程实现多任务调度-鸟哥][1]
+
+  [1]: http://www.laruence.com/2015/05/28/3038.html
+  [2]: https://www.zhihu.com/question/26966414
+  [3]: http://php.net/manual/zh/language.generators.syntax.php
