ssh原理与应用

--- a/Q21-25.md
+++ b/Q21-25.md
@@ -132,7 +132,7 @@ Are you sure you want to continue connecting (yes/no)?
  - 用户输入登陆密码，利用接受的服务器公钥来加密密码，将加密的密码发送给服务器，
  - 服务器用自己的私钥，解密密码。如果密码正确，允许登陆。否则，拒绝登陆。
 
-##免密登录
+###2、免密登录
 
 1、用户将自己的公钥放在服务器上。
 
