多维数组排序

--- a/Q21-25.md
+++ b/Q21-25.md
@@ -141,3 +141,64 @@ Are you sure you want to continue connecting (yes/no)?
 3、客户机利用自己的私钥对随机字符串进行加密，发送给服务器。
 
 4、服务器利用事先存储的公钥解密，解密出来正确，允许登陆，否则，拒绝登陆。
+
+##NO.24 如何对多维数组进行排序
+###问题
+现有一个数组，如下：
+```
+$a=[
+	['key1'=>940,'key2'=>'blah'],
+	['key1'=>23,'key2'=>'this'],
+	['key1'=>894,'key2'=>'that']
+];
+```
+我想按照元素中key1的键值进行升序排序,得到：
+```
+$a=[
+	['key1'=>23,'key2'=>'this'],
+	['key1'=>894,'key2'=>'that'],
+	['key1'=>940,'key2'=>'blah']
+];
+```
+###解决：使用usort()自定义排序。
+```
+<?php
+$a=[
+	['key1'=>940,'key2'=>'blah'],
+	['key1'=>23,'key2'=>'this'],
+	['key1'=>894,'key2'=>'that']
+];
+
+function asc_number_sort($x,$y){
+	if($x['key1']>$y['key1']){
+		return true;
+	}elseif ($x['key1']<$y['key1']) {
+		return false;
+	}else{
+		return 0;
+	}
+}
+
+usort($a,'asc_number_sort');
+print_r($a);
+```
+###usort()等的说明
+PHP 会把内层数组中的元素不断地发送给这个函数，从而将其排序。它必须接收两个参数，并且返回一个值表示哪个参数应该排在前面。
+
+负数或者false意味着第一个参数应该排在第二个参数前面。
+正数或者 true 则表示第二个参数应该排在前面。
+如果值为 0则表示两个参数值相等。
+```
+uasort()会保留数组元素的key
+uksort()会基于key进行排序
+```
+##NO.25 isset()、empty()、is_null的区别
+###isset()
+检查一个变量是否已声明，且值不为null。
+换句话说：只能在变量值不是null的时候才返回true。
+没有声明变量，或变量值为null，都会返回false。
+###empty()
+empty()用来检测一个变量是否为空。
+也就是一个变量是false、空字符串、空数组、''，NULL、以及被unset()后，才返回false。
+###is_null
+is_null是isset()的反函数。
