--- a/Q26-30.md
+++ b/Q26-30.md
@@ -12,10 +12,14 @@
 ```
 register_shutdown_function($callback)
 ```
-在脚本正常退出或者用户调用exit等方法时，才会被调用。
-相当于每调用register_shutdown_function()，就把你要注册进去的function放进【假装是队列吧】，等到脚本正常退出或显示调用exit时，再把注册进去的function拉出来执行.
+register_shutdown_function()，就把你要注册进去的function放进【假装是队列吧】，等到脚本正常退出或显示调用exit时，再把注册进去的function拉出来执行.
 
-注意:**正常退出**的脚本才会触发该函数， 而当脚本发生错误时， 是不会被触发的。
+**register_shutdown_function()调用的3种情况：**
+
+- 脚本正常退出时；
+- 在脚本运行(run-time not parse-time)出错退出时；
+- 用户调用exit方法退出时。
+
 ####error_get_last()
 error_get_last() 函数获取最后发生的错误。
 
@@ -49,9 +53,194 @@ function fatal_handler() {
   }
 }
 ```
+###强烈注意
 
+ >在parse-time出错的时候，是不会调用register_shutdown_function()函数的。只有在run-time出错的时候，才会调用register_shutdown_function()。
 
+下面我们举例说明：
 
+####NO.1
+#####error_handler.php
+```
+<?php
+register_shutdown_function("error_handler");
+function error_handler(){
+    echo "Yeah,it's worked!";
+}
+function test(){}
+function test(){}
+```
+执行结果如下：
+```
+Fatal error: Cannot redeclare test() (previously declared in /Users/shuchao/Desktop/error_handler.php:6) in /Users/shuchao/Desktop/error_handler.php on line 7
+```
+#####原因分析
+在执行error_handler.php的时候，由于重复定义了两个函数test(),在php的parse-time就出错了（不是run-time），所以不能回调register_shutdown_function()中的函数。
 
+####NO.2
+#####error_handler.php
+```
+<?php
+register_shutdown_function("error_handler");
+function error_handler(){
+    echo "Yeah,it's worked!";
+}
+if(true){
+   function test(){}
+}
+function test(){}
+```
+执行结果如下：
+```
+Fatal error: Cannot redeclare test() (previously declared in /Users/shuchao/Desktop/error_handler.php:9) in /Users/shuchao/Desktop/error_handler.php on line 7
+Yeah,it's worked!%
+```
+#####原因分析
+我们看到，上面回调了register_shutdown_function().
+因为我们加了一个if()判断，if()里面的test()方法，相当于一个闭包，与外面的test()名称不冲突。
+也就是，上面的代码在parse-time没有出错，而是在run-time的时候出错了，所以我们能够获取到fatal error。
+
+####NO.3 
+#####error_handler.php
+```
+<?php
+register_shutdown_function("error_handler");
+function error_handler(){
+    echo "Yeah,it's worked!";
+}
+```
+#####test_error.php
+```
+<?php
+include './error_handler.php';
+function test(){}
+function test(){}
+```
+执行 test_error.php的结果如下
+```
+Fatal error: Cannot redeclare test() (previously declared in /Users/shuchao/Desktop/test_error.php:3) in /Users/shuchao/Desktop/test_error.php on line 4
+```
+#####原因分析
+当我们在运行test_error.php的时候,因为redeclare了两个test()方法，所以php的语法解析器在parse-time的时候就出错了。 所以不能回调register_shutdown_function()中的方法，不能catch住这个fatal error。
+
+####NO.4 
+#####error_handler.php
+```
+<?php
+register_shutdown_function("error_handler");
+function error_handler(){
+    echo "Yeah,it's worked!";
+}
+```
+#####test_error.php
+```
+<?php
+function test(){}
+function test(){}
+```
+#####include_all.php
+```
+require './error_handler.php';
+require './test_error.php';
+```
+执行 include_all.php的结果如下
+```
+Fatal error: Cannot redeclare test() (previously declared in /Users/shuchao/Desktop/include_all.php:2) in /Users/shuchao/Desktop/include_all.php on line 3
+Yeah,it's worked!%
+```
+#####结果分析
+上面我们捕获了fatal_error.
+因为在运行include_all.php的时候，include_all.php本身语法并没有出错，也就是在parse-time的时候并没有出错，而是include的文件出错了，也就是在run-time的时候出错了，这个时候是能回调register_shutdown_function()中的函数的。
+
+#####强烈建议：如果我们要使用register_shutdown_function进行错误捕捉，使用NO.4，最后一种方法，可以确保错误都能捕捉到。
+
+##NO.27 PHP中output buffering的原理，以及相关的应用于函数
+###php缓存过程
+在请求一个PHP的过程中，实际上经过三个缓存:
+1. 程序缓存
+2. ob缓存 
+3. 浏览器缓存.
+###开启ob的两个方法
+```
+1.在php.ini 配置 ;output_buffering = 4096 这里去掉;号即可
+2 在php页面中使用 ob_start();
+```
+通过php.ini 打开的，则作用于所有的php页面 。使用ob_start()打开则只作用于该页面
+###ob缓存的知识点
+- 在服务中，如果我们开启了ob缓存，则echo数据首先放入到ob中
+- 当PHP页面**执行到最后**，则会把ob缓存的数据(如果有的话)， 强制刷新到程序缓存，然后通过apache对数据封装成http响应包，返 回给浏览器
+- 如果没有ob,所有的数据直接放入程序缓存。 header信息不管你是否开启ob,总是放入到程序缓存。
+###ob相关的函数
+####ob_start($callback)
+```
+//在当前页面中开启ob,注意callback
+ob_start($callback);
+```
+####ob_get_contents()
+```
+//获取当前ob缓存中的内容
+ob_get_contents()
+```
+####ob_get_clean()
+```
+//获取当前ob缓存中的内容，并且清空当前的ob缓存
+ob_get_clean()
+```
+####ob_flush()
+```
+//将ob缓存中的内容，刷到程序缓存中,但并没有关闭ob缓存
+ob_flush()
+```
+####ob_end_flush()
+```
+//关闭ob缓存，并将数据刷回到程序缓存中
+ob_end_flush()
+```
+####ob_clean()
+```
+//将ob缓存中的内容清空
+ob_clean()
+```
+####ob_end_clean()
+```
+//将ob缓存中的数据清空，并且关闭ob缓存
+ob_end_clean()
+```
+###注意ob_start($callback)的回调
+```
+<?php
+ob_start("callback_func");
+function callback_func($str){
+	return "callback".$str;
+}
+echo "123";//输出：callback123
+```
+###应用场景
+####在header()发送之前的报错
+#####出错代码
+```
+<?php
+echo "before_header";
+header("Content-type:text/html;charset=utf-8");
+echo "after_header";
+```
+输出：
+```
+Warning: Cannot modify header information - headers already sent by (output started at /Users/shuchao/Desktop/test.php:2) in /Users/shuchao/Desktop/test.php on line 3
+```
+#####解决办法
+在发送header前开启ob,则所有的echo内容都会到ob里面，从而解决错误。
+```
+<?php
+ob_start();
+echo "before_header\n";
+header("Content-type:text/html;charset=utf-8");
+echo "after_header\n";
+```
+输出
+```
+before_header
+after_header
+```
 
 
