--- a/Q26-30.md
+++ b/Q26-30.md
@@ -154,7 +154,7 @@ Yeah,it's worked!%
 
 #####强烈建议：如果我们要使用register_shutdown_function进行错误捕捉，使用NO.4，最后一种方法，可以确保错误都能捕捉到。
 
-##NO.27 PHP中output buffering的原理，以及相关的应用于函数
+##NO.27 PHP中output buffering的原理，以及相关的应用
 ###php缓存过程
 在请求一个PHP的过程中，实际上经过三个缓存:
 1. 程序缓存
